--- a/Front (Web)/src/components/Login/Modals/Modals.css
+++ b/Front (Web)/src/components/Login/Modals/Modals.css
@@ -28,6 +28,7 @@
     margin: 20px;
     display: flex;
     flex-direction: row-reverse;
+    padding: 0px;
 }
 
 .MuiContainer-root.bottomOptionsContainer{
