All Login Screens with all Css classes (no formularies working yet)

--- a/Front (Web)/src/components/Login/Modals/Modals.css
+++ b/Front (Web)/src/components/Login/Modals/Modals.css
@@ -5,7 +5,7 @@
     align-items: center;
     justify-content: center;
     max-width: 500px;
-    background-color: aliceblue;
+    background-color: lightgray;
 }
 
 .MuiBox-root.FormBox{
