--- a/Front (Web)/src/components/Login/Modals/Modals.css
+++ b/Front (Web)/src/components/Login/Modals/Modals.css
@@ -6,6 +6,7 @@
     justify-content: center;
     max-width: 500px;
     background-color: lightgray;
+    border-radius: 30px;
 }
 
 .MuiBox-root.FormBox{
@@ -21,6 +22,7 @@
 .MuiFormControl-root.FormInputs{
     width: 70%;
     margin-top: 30px;
+
 }
 
 .MuiContainer-root.FormButtonContainer{
