--- a/Front (Web)/src/components/MainApp/MainLayout.css
+++ b/Front (Web)/src/components/MainApp/MainLayout.css
@@ -11,7 +11,15 @@
 .MuiContainer-root.SidePanelContainer{
     background-color: lightgray;
     width: 24%;
-    height: 100%
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    align-items: center;
+    justify-content: flex-start;
+    padding-top: 70px;
+    padding-left: 0px;
+    padding-right: 0px;
 }
 
 .ContainerGrid{
