--- a/Front (Web)/src/components/Login/LoginLayout.css
+++ b/Front (Web)/src/components/Login/LoginLayout.css
@@ -4,8 +4,10 @@
     flex-wrap: nowrap;
     align-items: center;
     padding: 0px;
-    height: 99.9vh;
+    height: 100vh;
     max-width: none;
     justify-content: center;
-    background-color: lightblue;
+    background-image: url(../../assets/LoginBackground.jpeg);
+    background-repeat: no-repeat;
+    background-size:cover;
 }
