Added the first view for the MainApp-CentralPanel: Account Data. It is not connecte to server, but can be opened and closed (React useContext Hook added!)

--- a/Front (Web)/src/components/MainApp/MainLayout.css
+++ b/Front (Web)/src/components/MainApp/MainLayout.css
@@ -38,6 +38,12 @@
 .CentralPanel{
     background-color: lightblue;
     height: 86%; 
+    padding: 50px;
+}
+
+.MuiButton-root.CloseButton{
+    margin-top: 50px;
+
 }
 
 .FooterGrid{
