--- a/Front (Web)/src/components/MainApp/Views/View.css
+++ b/Front (Web)/src/components/MainApp/Views/View.css
@@ -1,7 +1,33 @@
 .MuiTypography-root.ViewTitle{
 margin-bottom: 30px;
+font-weight: bold;
 }
 
 .MuiTypography-root.ViewInfo{
 
+}
+
+.MuiContainer-root.AlertsContainer{
+    height: 60px;
+    padding: 0px;
+    min-width: none;
+    margin: 10px;
+}
+
+.MuiContainer-root.InputsContainer{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-left: -30px;
+}
+
+.FormBox{
+    display: flex;
+    flex-direction: column;
+}
+
+.MuiFormControl-root.FormInputs{
+    width: 50%;
+    margin-bottom: 15px;
+    background-color: lightgray;
 }
