--- a/Front (Web)/src/components/MainApp/MainLayout.css
+++ b/Front (Web)/src/components/MainApp/MainLayout.css
@@ -1,11 +1,11 @@
 .MuiContainer-root.ExternalContainer{
     display: flex;
     flex-direction: row;
-    flex-wrap: nowrap;
+    flex-wrap: wrap;
     align-items: center;
     padding: 0px;
     height: 100%;
-    max-width: none;
+    max-width: 100%;
     overflow: hidden;
 }
 
@@ -25,20 +25,22 @@
 
 .ContainerGrid{
     background-color: gray;
-    width: 67%;
-    height: 100vh
+    max-width: 76%;
+    height: 100vh;
+
 }
 
 .HeaderGrid{
     background-color: lightseagreen;
-    height: 8%
+    height: 8vh
 }
 
 
 .CentralPanel{
     background-color: lightblue;
-    height: 86%; 
-    padding: 50px;
+    max-width:inherit;
+    height: 86vh; 
+    padding: 0px;
 }
 
 .MuiButton-root.CloseButton{
@@ -48,5 +50,5 @@
 
 .FooterGrid{
     background-color: lightseagreen;
-    height: 6%;
+    height: 6vh;
 }
