--- a/Front (Web)/src/components/MainApp/Views/View.css
+++ b/Front (Web)/src/components/MainApp/Views/View.css
@@ -3,6 +3,11 @@ margin-bottom: 30px;
 font-weight: bold;
 }
 
+.MuiTypography-root.ViewSubTitle{
+    margin-bottom: 15px;
+    font-weight: bold;
+    }
+
 .MuiTypography-root.ViewInfo{
 
 }
@@ -30,4 +35,33 @@ font-weight: bold;
     width: 50%;
     margin-bottom: 15px;
     background-color: lightgray;
+}
+
+.MuiPaper-root.ViewWrapper{
+    background-color: rgb(255 255 255 / 26%);
+    width: 92%;
+    height: 80%;
+    margin: 40px;
+    margin-bottom: 30px;
+    overflow-y: hidden;
+    border-radius: 30px;
+    overflow-x: hidden;
+    padding: 20px;
+}
+
+/* This is just a wrapper that comes with the MaterialUI Button.
+Don't touch it. I just used it to kill it's built-in margin */
+.MuiButton-root.CloseButton{
+    margin: 0px;
+    height: 20px;
+    width: 200px;
+    border-radius: 20px;
+}
+
+.MuiContainer-root.CloseButtonContainer{
+    margin: 50px;
+    margin-top: 0px;
+    height: 5vh;
+    width: 100%;
+    padding-right: 10px;
 }
