--- a/Front (Web)/src/components/MainApp/Views/View.css
+++ b/Front (Web)/src/components/MainApp/Views/View.css
@@ -1,3 +1,4 @@
+/*TextForm.tsx, and VideoForm.tsx have this in-code modifyed*/
 .MuiTypography-root.ViewTitle{
 margin-bottom: 30px;
 font-weight: bold;
@@ -14,10 +15,10 @@ align-self: center;
 }
 
 .MuiContainer-root.AlertsContainerViews{
-    height: 30px;
+    height: 60px;
     padding: 0px;
     min-width: none;
-    margin: 0px;
+    margin: 5px;
 }
 
 .MuiContainer-root.InputsContainer{
