Boludeando con los fondos...

--- a/Front (Web)/src/components/Login/LoginLayout.css
+++ b/Front (Web)/src/components/Login/LoginLayout.css
@@ -7,7 +7,7 @@
     height: 100vh;
     max-width: none;
     justify-content: center;
-    background-image: url(../../assets/LoginBackground.jpeg);
+    background-image: url(../../assets/LoginAlternativo3b_B&N.webp);
     background-repeat: no-repeat;
     background-size:cover;
 }
