--- a/Front (Web)/src/components/MainApp/MainLayout.css
+++ b/Front (Web)/src/components/MainApp/MainLayout.css
@@ -21,6 +21,9 @@
     padding-top: 70px;
     padding-left: 0px;
     padding-right: 0px;
+    background-image: url(../../assets/SidePanel2.jpg);
+    background-repeat: no-repeat;
+    background-size:cover;
 }
 
 .ContainerGrid{
@@ -42,6 +45,9 @@
     max-width:inherit;
     height: 88vh; 
     padding: 0px;
+    background-image: url(../../assets/MainBody.webp);
+    background-repeat: no-repeat;
+    background-size:cover;
 }
 
 .MuiButton-root.CloseButton{
