--- a/Front (Web)/src/components/MainApp/Views/View.css
+++ b/Front (Web)/src/components/MainApp/Views/View.css
@@ -44,7 +44,7 @@ align-self: center;
 }
 
 .MuiPaper-root.ViewWrapper{
-    background-color: rgb(255 255 255 / 26%);
+    background-color: rgba(197, 220, 255, 0.8);
     width: 92%;
     height: 80%;
     margin: 40px;
