Loadding screen added, to be shown after any Summary Form is sent.
Added some explanaition on how to use the "alertMessagesHandler" service.

--- a/Front (Web)/src/components/MainApp/Views/View.css
+++ b/Front (Web)/src/components/MainApp/Views/View.css
@@ -107,3 +107,11 @@ Don't touch it. I just used it to kill it's built-in margin */
     margin: 0px;
     margin-bottom: 10px;
 }
+
+.ProgressLoadingBox{
+    width: 80%;
+    height: 50px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
