Added some Dev-helpfull-comments Changed default message for TextForm.tsx

--- a/Front (Web)/src/components/MainApp/Views/Dropdown.module.css
+++ b/Front (Web)/src/components/MainApp/Views/Dropdown.module.css
@@ -1,3 +1,7 @@
+/* Toma algunas cosas, y otras no... el formato quedó,
+pero es verdad que fue más casualidad que otra cosa.
+El Form, por ejemplo, tiene style en el código. */
+
 .Form{
     width: 50%;
     background-color: lightgray;
