--- a/Front (Web)/src/components/MainApp/Views/View.css
+++ b/Front (Web)/src/components/MainApp/Views/View.css
@@ -71,12 +71,17 @@ Touch it with caution. I just used it to kill it's built-in margin */
 }
 
 .MuiContainer-root.CloseButtonContainer{
-    margin: 50px;
-    margin-top: 0px;
-    margin-bottom: 20px;
-    height: 5vh;
+    margin: 0px;
+    height: 5%;
     width: 100%;
-    padding-right: 10px;
+    padding: 0px;
+    align-content: center;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-content: center;
+    justify-content: space-between;
+    align-items: center;
 }
 
 .MuiContainer-root.SwitchsContainer{
@@ -114,4 +119,43 @@ Touch it with caution. I just used it to kill it's built-in margin */
     display: flex;
     flex-direction: column;
     justify-content: center;
+}
+
+.MuiContainer-root.ContainerForPDFViewr{
+    max-height: 95%;
+    height: 100%;
+    min-width: 100%;
+    margin: 0px;
+    padding: 0px;
+}
+
+.ContainerForPDFViewrHeader{
+    max-height: 10%;
+}
+
+.MuiContainer-root.containerForPDFViewrEmbededs{
+    max-height: 90%;
+    height: 100%;
+    min-width: 100%;
+    margin: 0px;
+    padding: 0px;
+}
+
+.embededPDFViewr{
+    width: 100%;
+    height: 100%;
+}
+
+.MuiContainer-root.HeaderItemsConatiner{
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-between;
+    flex-direction: row;
+    align-content: center;
+    max-width: none;
+}
+
+.MuiTypography-root.SummaryTitle{
+    font-weight: bolder;
 }
