--- a/Front (Web)/src/components/MainApp/Views/View.css
+++ b/Front (Web)/src/components/MainApp/Views/View.css
@@ -46,9 +46,9 @@ align-self: center;
 .MuiPaper-root.ViewWrapper{
     background-color: rgba(197, 220, 255, 0.8);
     width: 92%;
-    height: 80%;
-    margin: 40px;
-    margin-bottom: 30px;
+    height: 90%;
+    margin: 20px;
+    margin-bottom: 5px;
     overflow-y: hidden;
     border-radius: 30px;
     overflow-x: hidden;
@@ -75,12 +75,10 @@ Touch it with caution. I just used it to kill it's built-in margin */
     height: 5%;
     width: 100%;
     padding: 0px;
-    align-content: center;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    align-content: center;
-    justify-content: space-between;
+    justify-content: space-around;
     align-items: center;
 }
 
@@ -127,6 +125,11 @@ Touch it with caution. I just used it to kill it's built-in margin */
     min-width: 100%;
     margin: 0px;
     padding: 0px;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    align-content: center;
+    justify-content: space-around;
 }
 
 .ContainerForPDFViewrHeader{
@@ -139,10 +142,16 @@ Touch it with caution. I just used it to kill it's built-in margin */
     min-width: 100%;
     margin: 0px;
     padding: 0px;
+    display: flex;
+    justify-content: center;
+}
+
+.embededPDFViewrLoader{
+    
 }
 
 .embededPDFViewr{
-    width: 100%;
+    width: 100%; 
     height: 100%;
 }
 
