Added "Work In Progress Indicator" to the user interface. It does its job... but I wrote some notes, because it can be improved.

--- a/Front (Web)/src/components/MainApp/MainLayout.css
+++ b/Front (Web)/src/components/MainApp/MainLayout.css
@@ -31,10 +31,21 @@
 
 }
 
-.HeaderGrid{
+.HeaderGridLeft{
     background-color: lightseagreen;
     height: 6%;
     align-content: center;
+}
+
+.MuiGrid-root.HeaderGridRight{
+    background-color: lightseagreen;
+    height: 6%;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-content: center;
+    justify-content: flex-end;
+    align-items: center;
 }
 
 
