--- a/Front (Web)/src/components/MainApp/SidePanel/SidePanel.css
+++ b/Front (Web)/src/components/MainApp/SidePanel/SidePanel.css
@@ -9,3 +9,14 @@
     margin-top: 50px;
     height: 100%;
 }
+
+.MuiContainer-root.DarkModeContainer{
+max-width: 100%;
+width: 100%;
+display: flex;
+flex-direction: row;
+justify-content: center;
+align-items: center;
+flex-wrap: nowrap;
+padding: 0px;
+}
