--- a/Front (Web)/src/components/MainApp/SidePanel/SidePanelComponents/List/List&Handler.css
+++ b/Front (Web)/src/components/MainApp/SidePanel/SidePanelComponents/List/List&Handler.css
@@ -1,5 +1,5 @@
 .MuiPaper-root.ListWrapper{
-    max-height: 50vh;
+    max-height: 100%;
     width: 100%;
     overflow-y: scroll;
     border-radius: 30px;
