--- a/Front (Web)/src/components/MainApp/SidePanel/SidePanelComponents/List/ListItem.css
+++ b/Front (Web)/src/components/MainApp/SidePanel/SidePanelComponents/List/ListItem.css
@@ -2,10 +2,43 @@
     display: flex;
     flex-direction: row;
     align-items: center;
-    padding-left: 10px;
-    padding-right: 10px;
+    flex-wrap: nowrap;
+    justify-content: flex-start;
+    background-color: rgb(225 222 222);
+    border-radius: 20px;
+    padding: 10px;
+    padding-top: 0px;
+    padding-bottom: 0px;
+}
+
+.MuiContainer-root.ItemAndTitleContainer{
+width: 90%;
+display: flex;
+flex-direction: row;
+flex-wrap: nowrap;
+justify-content: flex-start;
+align-items: center;
+padding: 0px;
+margin-left: 10px;
 }
 
 .MuiTypography-root.ListItemTitle{
-    min-width: max-content;
+    text-wrap:balance;
+}
+
+.MuiContainer-root.TitleAndCounterContainer{
+width: 100%;
+padding: 10px;
+margin: 0px;
+margin-left: 10px;
+}
+
+.MuiContainer-root.IconButtonContainer{
+    width: 10%;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content: flex-start;
+    align-items: center;
+    padding: 0px;
 }
