Lists: Both Lists now automatically get updated upon creating a new summary, or modifying the "isFavourite"value of a summary.
Also: added a message so user dom't have to wait until server responds when creating a summary.

--- a/Front (Web)/src/components/MainApp/SidePanel/SidePanelComponents/List/ListItem.css
+++ b/Front (Web)/src/components/MainApp/SidePanel/SidePanelComponents/List/ListItem.css
@@ -24,6 +24,10 @@ margin-left: 10px;
 
 .MuiTypography-root.ListItemTitle{
     text-wrap:balance;
+    -webkit-line-clamp: 2; /*Cantidad de líneas limitada a 2*/
+    display: -webkit-inline-box;
+    overflow: hidden;
+    -webkit-box-orient: vertical;
 }
 
 .MuiContainer-root.TitleAndCounterContainer{
