--- a/Front (Web)/src/components/Login/LoginLayout.css
+++ b/Front (Web)/src/components/Login/LoginLayout.css
@@ -7,7 +7,9 @@
     height: 100vh;
     max-width: none;
     justify-content: center;
-    background-image: url(../../assets/LoginAlternativo3b_B&N.webp);
+    background-image: url(../../assets/fondoConejo.gif);
     background-repeat: no-repeat;
-    background-size:cover;
+    background-size: initial;
+    background-position-x: center;
+    background-color: #eb717f;
 }
