--- a/Front (Web)/src/components/Login/Modals/Modals.css
+++ b/Front (Web)/src/components/Login/Modals/Modals.css
@@ -1,22 +1,27 @@
-.MuiContainer-root.ExternalLoginContainer{
+.MuiContainer-root.ExternalLoginContainer {
     display: flex;
-    flex-direction: column;
-    flex-wrap: nowrap;
-    align-items: center;
+    flex-direction: row;
+    align-items: flex-end;
     justify-content: center;
-    max-width: 500px;
-    background-color: rgba(211, 211, 211, 0.90);
+    min-width: 500px;
+    bottom: 12%;
+    width: 960px;
+    height: 550px;
+    background-color: rgb(241 235 237);
     border-radius: 30px;
+    overflow: hidden;
+    position: absolute;
+    clip-path: path('M 0 110 Q 144 -46, 360 45 Q 490 112, 672 45 Q 816 -12, 960 85 L 960 600 L 0 600 Z');
 }
 
 .MuiBox-root.FormBox{
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
     width: -webkit-fill-available;
     margin-top: 30px;
-    margin-bottom: 30px;
+    margin-bottom: 60px;
+    justify-content: flex-end;
 }
 
 .MuiFormControl-root.FormInputs{
@@ -35,6 +40,9 @@
 
 .MuiContainer-root.bottomOptionsContainer{
     margin-bottom: 20px;
+    height: 400px;
+    align-content: center;
+    border-left: 1px solid #eb717f;
 }
 
 .MuiContainer-root.AlertsContainer{
