add curv path in sidepanel

--- a/Front (Web)/src/components/MainApp/SidePanel/SidePanel.css
+++ b/Front (Web)/src/components/MainApp/SidePanel/SidePanel.css
@@ -6,11 +6,23 @@
     height: 370px;
 }
 
+.MuiContainer-root.SidePanelLogo::after{
+    content: '';
+    position: absolute;
+    background-color: red;
+    display: block;
+    width: 370px;
+    height: 100px;
+    left: 0;
+    top: 184px;
+    clip-path: path('M 0 30 Q 55.5 7.5, 138.5 45 Q 189.6 66.4, 260 43 Q 313 18.5, 370 42.5 L 370 100 L 0 100 Z');
+}
+
 .MuiContainer-root.SidePanelAccordionContainer{
     padding-left: 0px;
     padding-right: 0px;
     margin: 0px;
-    margin-top: 50px;
+    margin-top: 30px;
     height: 100%;
 
 }
