Fixed: an error shown in the browser where a button was added inside another button.
Minor changes: Console.log() deletions

--- a/Front (Web)/src/components/MainApp/Views/View.css
+++ b/Front (Web)/src/components/MainApp/Views/View.css
@@ -46,7 +46,7 @@ align-self: center;
 .MuiFormControl-root.CommentsTitleInputsViews{
     width: 80%;
     margin-bottom: 20px;
-    background-color: lightgray;ack;
+    background-color: lightgray;
 }
 
 .MuiPaper-root.ViewWrapper{
