--- a/Front (Web)/src/components/MainApp/Views/View.css
+++ b/Front (Web)/src/components/MainApp/Views/View.css
@@ -178,6 +178,7 @@ Touch it with caution. I just used it to kill it's built-in margin */
 }
 
 .MuiContainer-root.HeaderItemsConatiner{
+    width: 100%;
     display: flex;
     flex-wrap: wrap;
     align-items: center;
@@ -189,4 +190,11 @@ Touch it with caution. I just used it to kill it's built-in margin */
 
 .MuiTypography-root.SummaryTitle{
     font-weight: bolder;
+}
+
+.MuiAvatar-root.PDFviewrHeadAvatar{
+    width: 60px;
+    height:60px;
+    margin-right: 15px;
+
 }
