--- a/Front (Web)/src/components/MainApp/SidePanel/SidePanelComponents/List/List&Handler.css
+++ b/Front (Web)/src/components/MainApp/SidePanel/SidePanelComponents/List/List&Handler.css
@@ -2,9 +2,28 @@
     max-height: 55vh;
     width: 100%;
     overflow-y: scroll;
-    border-radius: 30px;
+    border-radius: 12px;
     overflow-x: hidden;
 }
+
+::-webkit-scrollbar {
+    width: 5px;
+  }
+  
+  /* Track */
+  ::-webkit-scrollbar-track {
+    background: #c1c1c1;
+  }
+  
+  /* Handle */
+  ::-webkit-scrollbar-thumb {
+    background: #ea840f;
+  }
+  
+  /* Handle on hover */
+  ::-webkit-scrollbar-thumb:hover {
+    background: #555;
+  }
 
 .MuiContainer-root.searchBoxContainer{
     padding: 20px;
@@ -18,12 +37,20 @@
     width: 100%;
 }
 
+.MuiTextField-root.SearchBox .MuiInputAdornment-root:not(.MuiInputAdornment-hiddenLabel).InputSearchbox{
+  margin-top: 0;
+}
+
 .MuiTextField-root.SearchBox{
     width: 100%;
 }
 
+.MuiTextField-root.SearchBox input{
+  padding-top: 12px;
+}
 
 .MuiAvatar-root.avatarForListItem{
-height: 60px;
-width: 60px;
+    height: 60px;
+    width: 60px;
+    border-radius: 8px;
 }
