add change pictures and add colors in the web

--- a/Front (Web)/src/components/MainApp/SidePanel/SidePanel.css
+++ b/Front (Web)/src/components/MainApp/SidePanel/SidePanel.css
@@ -1,20 +1,17 @@
 .MuiContainer-root.SidePanelLogo{
-    background-image: url(../../../assets/dome1.gif);
     background-size: 380px;
     background-repeat: no-repeat;
     background-position: center;
     height: 370px;
 }
 
-.MuiContainer-root.SidePanelLogo::after{
-    content: '';
+.MuiContainer-root.Curva {
     position: absolute;
-    background-color: #121212;
     display: block;
-    width: 367px;
-    height: 100px;
     left: 0;
     top: 184px;
+    width: 367px;
+    height: 90px;
     clip-path: path('M 0 30 Q 55.5 7.5, 138.5 45 Q 189.6 66.4, 260 43 Q 313 18.5, 370 42.5 L 370 100 L 0 100 Z');
 }
 
