--- a/Front (Web)/src/components/Login/LoginLayout.css
+++ b/Front (Web)/src/components/Login/LoginLayout.css
@@ -11,5 +11,6 @@
     background-repeat: no-repeat;
     background-size: initial;
     background-position-x: center;
+    background-position-y: calc(50% - 300px);
     background-color: #eb717f;
 }
