--- a/Front (Web)/src/components/Login/Modals/Modals.css
+++ b/Front (Web)/src/components/Login/Modals/Modals.css
@@ -4,14 +4,12 @@
     align-items: flex-end;
     justify-content: center;
     min-width: 500px;
-    bottom: 12%;
     width: 960px;
     height: 550px;
     background-color: rgb(241 235 237);
     border-radius: 30px;
     overflow: hidden;
-    position: absolute;
-    /*clip-path: path('M 0 110 Q 144 -46, 360 45 Q 490 112, 672 45 Q 816 -12, 960 85 L 960 600 L 0 600 Z');*/
+    clip-path: path('M 0 110 Q 144 -46, 360 45 Q 490 112, 672 45 Q 816 -12, 960 85 L 960 600 L 0 600 Z');
 }
 
 .MuiTypography-root.Subtitle {
