PDFs are now seen in a larger Area (width adjusted).

--- a/Front (Web)/src/components/MainApp/Views/View.css
+++ b/Front (Web)/src/components/MainApp/Views/View.css
@@ -190,6 +190,8 @@
 
 .MuiContainer-root.containerForPDFViewrEmbeded{
     height: 90%;
+    max-width: none;
+    padding-right: 50px;
 }
 
 .embededPDFViewr{
