SEND button, while the PDFViewer is active, now changes it's color and icon, to show the status of the request.
Also: did some minor style modifications, and some minor code cleanning.

--- a/Front (Web)/src/components/MainApp/Views/View.css
+++ b/Front (Web)/src/components/MainApp/Views/View.css
@@ -117,6 +117,14 @@
     align-items: center;
 }
 
+
+
+.ButtonContainerWarnings{
+    position: relative;
+    top: -60px;
+    left: 50%;
+}
+
 .MuiContainer-root.SwitchsContainer{
     display: flex;
     flex-direction: column;
