F.A.Q. section has now real Q&A.
HELP section was deprecated, and somehow merged with the FAQ.

--- a/Front (Web)/src/components/MainApp/Views/View.css
+++ b/Front (Web)/src/components/MainApp/Views/View.css
@@ -81,6 +81,11 @@
     margin: 80px;
     border-radius: 20px;
     display: flex;
+    max-height: 70%;
+}
+
+.MuiContainer-root.FaqMapContainer{
+overflow: scroll;
 }
 
 
